--- a/src/assets/scss/chrome/sidebar/_right.scss
+++ b/src/assets/scss/chrome/sidebar/_right.scss
@@ -4,7 +4,7 @@
   position: absolute;
   inset-block: 0 px(8);
   inset-inline-end: 0;
-  z-index: 9;
+  z-index: 1;
   flex: 0 0 auto;
   flex-direction: column;
   inline-size: var(--mv-sidebar-right-width);
